// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should render with search results 1`] = `
<div>
  <div
    class="main"
  >
    <div>
      <h3
        class="title"
      >
        Search results:
      </h3>
      <div
        class="wrapMovies"
      >
        <div
          class="wrapMovie"
        >
          <a
            class="movieCard"
            href="/movies/1"
          >
            <div
              class="wrapImage"
            >
              <div
                class="overlay"
              />
              <img
                alt="movie"
                class="image"
                src="https://image.tmdb.org/t/p/w500/film_1.jpg"
              />
              <span
                class="rating"
              >
                68.0
              </span>
              <div
                class="preview"
              />
            </div>
            <div
              class="content"
            >
              <h2
                class="title"
              >
                Красотка на взводе
              </h2>
              <p
                class="genre"
              >
                <span />
                <span />
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div
      class="wrapPagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="item active"
        >
          1
        </li>
        <li
          class="item"
        >
          2
        </li>
        <li
          class="item"
        >
          3
        </li>
        <li
          class="item"
        >
          4
        </li>
        <li
          class="item"
        >
          5
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Main should render with the list of movies 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="wrapCategoriesSort"
    >
      <div
        class="categoriesSort"
      >
        <input
          checked=""
          id="radio-1"
          name="sort"
          type="radio"
          value="popular"
        />
        <label
          for="radio-1"
        >
          Popular
        </label>
        <input
          id="radio-2"
          name="sort"
          type="radio"
          value="top_rated"
        />
        <label
          for="radio-2"
        >
          Top rated
        </label>
        <input
          id="radio-3"
          name="sort"
          type="radio"
          value="upcoming"
        />
        <label
          for="radio-3"
        >
          Upcoming
        </label>
      </div>
    </div>
    <div
      class="wrapMovies"
    >
      <div
        class="wrapMovie"
      >
        <a
          class="movieCard"
          href="/movies/1"
        >
          <div
            class="wrapImage"
          >
            <div
              class="overlay"
            />
            <img
              alt="movie"
              class="image"
              src="https://image.tmdb.org/t/p/w500/film_1.jpg"
            />
            <span
              class="rating"
            >
              68.0
            </span>
            <div
              class="preview"
            />
          </div>
          <div
            class="content"
          >
            <h2
              class="title"
            >
              Красотка на взводе
            </h2>
            <p
              class="genre"
            >
              <span />
              <span />
            </p>
          </div>
        </a>
      </div>
    </div>
    <div
      class="wrapPagination"
    >
      <ul
        class="pagination"
      >
        <li
          class="item active"
        >
          1
        </li>
        <li
          class="item"
        >
          2
        </li>
        <li
          class="item"
        >
          3
        </li>
        <li
          class="item"
        >
          4
        </li>
        <li
          class="item"
        >
          5
        </li>
      </ul>
    </div>
  </div>
</div>
`;
